--- a/Mealmate.Admin/Areas/Setting/Views/Shared/Components/RestaurantList/Default.cshtml
+++ b/Mealmate.Admin/Areas/Setting/Views/Shared/Components/RestaurantList/Default.cshtml
@@ -45,15 +45,20 @@
                     </span>
                 </td>
                 <td>
-                    <a asp-area="Admin" asp-controller="Restaurant" asp-action="Update"
-                       data-id="@item.RestaurantId"
+                    <a asp-area="Setting" asp-controller="Restaurant" asp-action="Update"
+                       asp-route-id="@item.RestaurantId"
                        class="btn btn-sm btn-clean btn-icon btn-icon-md js-update" title="Edit">
                         <i class="fa fa-pencil-alt"></i>
+                    </a>
+                    <a asp-area="Setting" asp-controller="Hall" asp-action="Detail"
+                       data-id="@item.RestaurantId"
+                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-hall" title="Halls">
+                        <i class="fa fa-home text-success"></i>
                     </a>
 
                     @if (item.StateId == 1)
                     {
-                        <a asp-area="Admin" asp-controller="Restaurant" asp-action="Toggle"
+                        <a asp-area="Setting" asp-controller="Restaurant" asp-action="Toggle"
                            data-id="@item.RestaurantId"
                            class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
                            title="Set passive">
@@ -62,7 +67,7 @@
                     }
                     else
                     {
-                        <a asp-area="Admin" asp-controller="Restaurant" asp-action="Toggle"
+                        <a asp-area="Setting" asp-controller="Restaurant" asp-action="Toggle"
                            data-id="@item.RestaurantId"
                            class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
                            title="Set active">
