--- a/Mealmate.Admin/Areas/Restaurant/Views/_ViewImports.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@*@using Mealmate.Admin.Areas.Setting.ViewModels*@
+@using Mealmate.Admin.Areas.Restaurant.ViewModels
