--- a/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
@@ -175,24 +175,25 @@
                     <div class="card-body">
 
                         <div class="row form-group">
-                            <div class="col-md-12">
-                                <label class="col-form-label">Name</label>
-                                <input type="text" asp-for="Title" class="form-control" />
-                            </div>
                             <div class="col-md-6">
-                                <label class="col-form-label">Hall</label>
+                                <label class="col-form-label font-weight-bolder">Branch &amp; Hall</label>
                                 <select class="custom-select" asp-for="HallId" asp-items="Model.Halls">
                                     <option value="">Select From List</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
-                                <label class="col-form-label">Menu Type</label>
+                                <label class="col-form-label font-weight-bolder">Menu Type</label>
                                 <select class="custom-select" asp-for="MenuTypeId" asp-items="Model.MenuTypes">
                                     <option value="">Select From List</option>
                                 </select>
                             </div>
                             <div class="col-md-12">
-                                <label class="col-form-label">Description</label>
+                                <label class="col-form-label font-weight-bolder">Name</label>
+                                <input type="text" asp-for="Title" class="form-control" />
+                            </div>
+
+                            <div class="col-md-12">
+                                <label class="col-form-label font-weight-bolder">Description</label>
                                 <textarea type="text" asp-for="Description" class="form-control" rows="4"></textarea>
                             </div>
                         </div>
@@ -301,7 +302,7 @@
                         //    $("#BtnSaveChanges").hide();
                         //}
                     },
-                    error: function () {}
+                    error: function () { }
                 });
             });
 
