--- a/Mealmate.Admin/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Menu/Index.cshtml
@@ -253,6 +253,12 @@
                         <div class="row align-items-center">
                             <div class="col-12">
                                 <div class="row align-items-center">
+                                    <div class="col-lg-12 col-md-12">
+                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Branch</h5>
+                                        <select class="custom-select" asp-for="BranchId" asp-items="Model.Branches">
+                                            <option value="">Select From List</option>
+                                        </select>
+                                    </div>
                                     <div class="col-lg-12 col-md-12 mt-5">
                                         <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Menu Types</h5>
                                     </div>
