--- a/Mealmate.Admin/Areas/Admin/Views/QRCode/Create.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/QRCode/Create.cshtml
@@ -180,28 +180,9 @@
                             <div class="row align-items-center">
                                 <div class="col-12">
                                     <div class="row align-items-center">
+                                        
                                         <div class="col-lg-12 col-md-12 mt-5">
-                                            <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">QR Code Types</h5>
-                                        </div>
-
-                                        <div class="col-lg-12 col-md-12">
-                                            <div class="kt-checkbox-inline">
-                                                @for (int i = 0; i < Model.QRCodeTypes.Count; i++)
-                                                {
-
-                                                    <label class="checkbox mr-4">
-                                                        <input type="checkbox" asp-for="@Model.QRCodeTypes[i].IsSelected">
-                                                        @Model.QRCodeTypes[i].Name
-                                                        <span></span>
-                                                    </label>
-
-                                                    <input type="hidden" asp-for="@Model.QRCodeTypes[i].QRCodeTypeId" />
-                                                    <input type="hidden" asp-for="@Model.QRCodeTypes[i].Name" />
-                                                }
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12 col-md-12 mt-5">
-                                            <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Restaurant &amp; Hall</h5>
+                                            <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Branch &amp; Hall</h5>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-5">
                                             <select class="custom-select" asp-for="HallId" asp-items="Model.Halls">
