--- a/Mealmate.Admin/Areas/Restaurant/Views/Branch/Create.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/Branch/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Update Restaurant";
+    ViewBag.Title = "Branch Registration";
 }
 <!--begin::Dashboard-->
 <!--begin::Content-->
@@ -13,7 +13,7 @@
                 <!--begin::Heading-->
                 <div class="d-flex flex-column">
                     <!--begin::Title-->
-                    <h2 class="text-white font-weight-bold my-2 mr-5">Restaurant Management</h2>
+                    <h2 class="text-white font-weight-bold my-2 mr-5">Branch Registration</h2>
                     <!--end::Title-->
                     <!--begin::Breadcrumb-->
                     <div class="d-flex align-items-center font-weight-bold my-2">
@@ -32,16 +32,16 @@
                         <!--end::Item-->
                         <!--begin::Item-->
                         <span class="label label-dot label-sm bg-white opacity-75 mx-3"></span>
-                        <a asp-area="Admin" asp-controller="Restaurant" asp-action="Index"
+                        <a asp-area="Restaurant" asp-controller="Home" asp-action="Index"
                            class="text-white text-hover-white opacity-75 hover-opacity-100">
-                            Restaurants
+                            Restaurant
                         </a>
                         <!--end::Item-->
                         <!--begin::Item-->
                         <span class="label label-dot label-sm bg-white opacity-75 mx-3"></span>
                         <a asp-area="Admin" asp-controller="Restaurant" asp-action="Create"
                            class="text-white text-hover-white opacity-75 hover-opacity-100">
-                            Update
+                            Branch Registration
                         </a>
                         <!--end::Item-->
                     </div>
@@ -162,20 +162,37 @@
                 <div class="card-header flex-wrap border-0 pt-6 pb-0">
                     <div class="card-title">
                         <h3 class="card-label">
-                            Update Restaurant
+                            Branch Details
                             <span class="d-block text-muted pt-2 font-size-sm">
-                                Edit exisiting restaurant data
+                                Registration of new branch
                             </span>
                         </h3>
                     </div>
                     <div class="card-toolbar">
-                        
+
                     </div>
                 </div>
                 <div class="card-body">
                 </div>
             </div>
 
+            <div class="card card-custom mt-5">
+                <div class="card-header flex-wrap border-0 pt-6 pb-0">
+                    <div class="card-title">
+                        <h3 class="card-label">
+                            Halls &amp; Tables
+                            <span class="d-block text-muted pt-2 font-size-sm">
+                                Branch's halls &amp; tables
+                            </span>
+                        </h3>
+                    </div>
+                    <div class="card-toolbar">
+
+                    </div>
+                </div>
+                <div class="card-body">
+                </div>
+            </div>
         </div>
         <!--end::Container-->
     </div>
@@ -194,7 +211,7 @@
 
     <script>
         $(function () {
-            $("ul.menu-nav li:eq(5)").addClass("menu-item-active");
+            $("ul.menu-nav li:eq(2)").addClass("menu-item-active");
 
         })
     </script>
