--- a/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
@@ -172,18 +172,18 @@
                                         Restaurant No. 1
                                     </a>
                                     @*<a href="#">
-                                        <i class="flaticon2-correct text-success font-size-h5"></i>
-                                    </a>*@
+                                            <i class="flaticon2-correct text-success font-size-h5"></i>
+                                        </a>*@
                                 </div>
                                 <div class="my-lg-0 my-3">
-                                    <a href="#" class="btn btn-sm btn-light-success font-weight-bolder text-uppercase mr-3">ask</a>
-                                    <a href="#" class="btn btn-sm btn-info font-weight-bolder text-uppercase">hire</a>
+                                    <a href="#" class="btn btn-sm btn-light-success font-weight-bolder text-uppercase mr-3">update</a>
+                                    @*<a href="#" class="btn btn-sm btn-info font-weight-bolder text-uppercase">hire</a>*@
                                 </div>
                             </div>
                             <!--end::Title-->
                             <!--begin::Content-->
                             <div class="d-flex flex-wrap justify-content-between mt-1">
-                                <div class="d-flex flex-column flex-grow-1 pr-8">
+                                <div class="d-flex flex-column flex-grow-1">
                                     <div class="d-flex flex-wrap mb-4">
                                         <a href="#" class="text-dark-50 text-hover-primary font-weight-bold mr-lg-8 mr-5 mb-lg-0 mb-2">
                                             <i class="flaticon2-new-email mr-2 font-size-lg"></i>jason@siastudio.com
@@ -195,16 +195,17 @@
                                             <i class="flaticon2-placeholder mr-2 font-size-lg"></i>Melbourne
                                         </a>
                                     </div>
-                                    <span class="font-weight-bold text-dark-50">I distinguish three main text objectives could be merely to inform people.</span>
-                                    <span class="font-weight-bold text-dark-50">A second could be persuade people.You want people to bay objective</span>
+                                    <span class="font-weight-bold text-dark-50">
+                                        I distinguish three main text objectives could be merely to inform people. A second could be persuade people.You want people to bay objective
+                                    </span>
                                 </div>
-                                <div class="d-flex align-items-center w-25 flex-fill float-right mt-lg-12 mt-8">
-                                    <span class="font-weight-bold text-dark-75">Progress</span>
-                                    <div class="progress progress-xs mx-3 w-100">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 63%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span class="font-weight-bolder text-dark">78%</span>
-                                </div>
+                                @*<div class="d-flex align-items-center w-25 flex-fill float-right mt-lg-12 mt-8">
+                                        <span class="font-weight-bold text-dark-75">Progress</span>
+                                        <div class="progress progress-xs mx-3 w-100">
+                                            <div class="progress-bar bg-success" role="progressbar" style="width: 63%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span class="font-weight-bolder text-dark">78%</span>
+                                    </div>*@
                             </div>
                             <!--end::Content-->
                         </div>
@@ -278,27 +279,9 @@
                         <!--begin::Item-->
                         <div class="d-flex align-items-center flex-lg-fill mb-2 float-left">
                             <span class="mr-4">
-                                <i class="flaticon-network display-4 text-muted font-weight-bold"></i>
+                                @*<i class="flaticon-network display-4 text-muted font-weight-bold"></i>*@
                             </span>
                             <div class="symbol-group symbol-hover">
-                                <div class="symbol symbol-30 symbol-circle" data-toggle="tooltip" title="" data-original-title="Mark Stone">
-                                    <img alt="Pic" src="~/assets/media/users/300_25.jpg">
-                                </div>
-                                <div class="symbol symbol-30 symbol-circle" data-toggle="tooltip" title="" data-original-title="Charlie Stone">
-                                    <img alt="Pic" src="~/assets/media/users/300_19.jpg">
-                                </div>
-                                <div class="symbol symbol-30 symbol-circle" data-toggle="tooltip" title="" data-original-title="Luca Doncic">
-                                    <img alt="Pic" src="~/assets/media/users/300_22.jpg">
-                                </div>
-                                <div class="symbol symbol-30 symbol-circle" data-toggle="tooltip" title="" data-original-title="Nick Mana">
-                                    <img alt="Pic" src="~/assets/media/users/300_23.jpg">
-                                </div>
-                                <div class="symbol symbol-30 symbol-circle" data-toggle="tooltip" title="" data-original-title="Teresa Fox">
-                                    <img alt="Pic" src="~/assets/media/users/300_18.jpg">
-                                </div>
-                                <div class="symbol symbol-30 symbol-circle symbol-light">
-                                    <span class="symbol-label font-weight-bold">5+</span>
-                                </div>
                             </div>
                         </div>
                         <!--end::Item-->
