--- a/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
@@ -212,11 +212,11 @@
                         <!--end::Info-->
                     </div>
                     <!--end::Details-->
-                    <div class="separator separator-solid"></div>
+                    @*<div class="separator separator-solid"></div>*@
                     <!--begin::Items-->
-                    <div class="d-flex align-items-center flex-wrap mt-8">
+                    <!--<div class="d-flex align-items-center flex-wrap mt-8">-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
                             <span class="mr-4">
                                 <i class="flaticon-piggy-bank display-4 text-muted font-weight-bold"></i>
                             </span>
@@ -226,10 +226,10 @@
                                     <span class="text-dark-50 font-weight-bold">$</span>249,500
                                 </span>
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
                             <span class="mr-4">
                                 <i class="flaticon-confetti display-4 text-muted font-weight-bold"></i>
                             </span>
@@ -239,10 +239,10 @@
                                     <span class="text-dark-50 font-weight-bold">$</span>164,700
                                 </span>
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
                             <span class="mr-4">
                                 <i class="flaticon-pie-chart display-4 text-muted font-weight-bold"></i>
                             </span>
@@ -252,10 +252,10 @@
                                     <span class="text-dark-50 font-weight-bold">$</span>782,300
                                 </span>
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
                             <span class="mr-4">
                                 <i class="flaticon-file-2 display-4 text-muted font-weight-bold"></i>
                             </span>
@@ -263,10 +263,10 @@
                                 <span class="text-dark-75 font-weight-bolder font-size-sm">73 Tasks</span>
                                 <a href="#" class="text-primary font-weight-bolder">View</a>
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mr-5 mb-2">
                             <span class="mr-4">
                                 <i class="flaticon-chat-1 display-4 text-muted font-weight-bold"></i>
                             </span>
@@ -274,18 +274,18 @@
                                 <span class="text-dark-75 font-weight-bolder font-size-sm">648 Comments</span>
                                 <a href="#" class="text-primary font-weight-bolder">View</a>
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <div class="d-flex align-items-center flex-lg-fill mb-2 float-left">
+                        <!--<div class="d-flex align-items-center flex-lg-fill mb-2 float-left">
                             <span class="mr-4">
-                                @*<i class="flaticon-network display-4 text-muted font-weight-bold"></i>*@
+                                <i class="flaticon-network display-4 text-muted font-weight-bold"></i>
                             </span>
                             <div class="symbol-group symbol-hover">
                             </div>
-                        </div>
+                        </div>-->
                         <!--end::Item-->
-                    </div>
+                    <!--</div>-->
                     <!--begin::Items-->
                 </div>
             </div>
