--- a/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -164,7 +164,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <!--begin::Footer-->
                                         <div class="navi-separator mt-3"></div>
                                         <div class="navi-footer px-8 py-5">
-                                            <a asp-controller="Auth" asp-action="SignOut" class="btn btn-light-primary font-weight-bold">Sign Out</a>
+                                            <a asp-area="" asp-controller="Auth" asp-action="SignOut" class="btn btn-light-primary font-weight-bold">Sign Out</a>
                                         </div>
                                         <!--end::Footer-->
                                     </div>
