--- a/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/Home/Index.cshtml
@@ -176,7 +176,8 @@
                                         </a>*@
                                 </div>
                                 <div class="my-lg-0 my-3">
-                                    <a href="#" class="btn btn-sm btn-light-success font-weight-bolder text-uppercase mr-3">update</a>
+                                    <a asp-area="Restaurant" asp-controller="Branch" asp-action="Update"
+                                       class="btn btn-primary font-weight-bolder text-uppercase mr-3">edit</a>
                                     @*<a href="#" class="btn btn-sm btn-info font-weight-bolder text-uppercase">hire</a>*@
                                 </div>
                             </div>
@@ -368,22 +369,22 @@
                         </div>
                         <!--end::Dropdown-->
                         <!--begin::Button-->
-                        <a asp-area="Restaurant" asp-controller="Branch" asp-action="Create"
+                        <!--<a asp-area="Restaurant" asp-controller="Branch" asp-action="Create"
                            data-toggle="ajax-modal-user" id="BtnNewRestaurant"
                            class="btn btn-primary font-weight-bolder">
-                            <span class="svg-icon svg-icon-md">
+                            <span class="svg-icon svg-icon-md">-->
                                 <!--begin::Svg Icon | path:assets/media/svg/icons/Design/Flatten.svg-->
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                         <rect x="0" y="0" width="24" height="24"></rect>
                                         <circle fill="#000000" cx="9" cy="15" r="6"></circle>
                                         <path d="M8.8012943,7.00241953 C9.83837775,5.20768121 11.7781543,4 14,4 C17.3137085,4 20,6.6862915 20,10 C20,12.2218457 18.7923188,14.1616223 16.9975805,15.1987057 C16.9991904,15.1326658 17,15.0664274 17,15 C17,10.581722 13.418278,7 9,7 C8.93357256,7 8.86733422,7.00080962 8.8012943,7.00241953 Z" fill="#000000" opacity="0.3"></path>
                                     </g>
-                                </svg>
+                                </svg>-->
                                 <!--end::Svg Icon-->
-                            </span>
+                            <!--</span>
                             New Record
-                        </a>
+                        </a>-->
                         <!--end::Button-->
                     </div>
                 </div>
@@ -485,22 +486,22 @@
                         </div>
                         <!--end::Dropdown-->
                         <!--begin::Button-->
-                        <a asp-area="Setting" asp-controller="Restaurant" asp-action="Create"
+                        <!--<a asp-area="Setting" asp-controller="Restaurant" asp-action="Create"
                            data-toggle="ajax-modal-user" id="BtnNewRestaurant"
                            class="btn btn-primary font-weight-bolder">
-                            <span class="svg-icon svg-icon-md">
+                            <span class="svg-icon svg-icon-md">-->
                                 <!--begin::Svg Icon | path:assets/media/svg/icons/Design/Flatten.svg-->
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                         <rect x="0" y="0" width="24" height="24"></rect>
                                         <circle fill="#000000" cx="9" cy="15" r="6"></circle>
                                         <path d="M8.8012943,7.00241953 C9.83837775,5.20768121 11.7781543,4 14,4 C17.3137085,4 20,6.6862915 20,10 C20,12.2218457 18.7923188,14.1616223 16.9975805,15.1987057 C16.9991904,15.1326658 17,15.0664274 17,15 C17,10.581722 13.418278,7 9,7 C8.93357256,7 8.86733422,7.00080962 8.8012943,7.00241953 Z" fill="#000000" opacity="0.3"></path>
                                     </g>
-                                </svg>
+                                </svg>-->
                                 <!--end::Svg Icon-->
-                            </span>
+                            <!--</span>
                             New Record
-                        </a>
+                        </a>-->
                         <!--end::Button-->
                     </div>
                 </div>
