SignUp, Forget Password Design Implemented...  Restaurant Information Update Interface Impemented.. admin Dashboard Design
Related Work Items: #43

--- a/Mealmate.Admin/Areas/Admin/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Home/Index.cshtml
@@ -144,19 +144,142 @@
                     <p>The Metronic Datatable component supports initialization from HTML table. It also defines the schema model of the data source. In addition to the visualization, the Datatable provides built-in support for operations over data such as sorting, filtering and paging performed in user browser (frontend).</p>For more information visit
                     <a class="font-weight-bold" href="https://keenthemes.com/metronic/?page=docs&amp;section=datatable" target="_blank">Metronic KTDatatable Documentation</a>.
                 </div>
+
             </div>
+            <div class="row">
+                <div class="col-lg-6 col-xxl-4">
+                    <!--begin::Mixed Widget 4-->
+                    <div class="card card-custom bg-radial-gradient-danger gutter-b card-stretch">
+                        <!--begin::Header-->
+                        <div class="card-header border-0 py-5">
+                            <h3 class="card-title font-weight-bolder text-white">Sales Progress</h3>
+                            <div class="card-toolbar">
+                                <div class="dropdown dropdown-inline">
+                                    <a href="#" class="btn btn-text-white btn-hover-white btn-sm btn-icon border-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="ki ki-bold-more-hor"></i>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
+                                        <!--begin::Navigation-->
+                                        <ul class="navi navi-hover">
+                                            <li class="navi-header pb-1">
+                                                <span class="text-primary text-uppercase font-weight-bold font-size-sm">Add new:</span>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-shopping-cart-1"></i>
+                                                    </span>
+                                                    <span class="navi-text">Order</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-calendar-8"></i>
+                                                    </span>
+                                                    <span class="navi-text">Event</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-graph-1"></i>
+                                                    </span>
+                                                    <span class="navi-text">Report</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-rocket-1"></i>
+                                                    </span>
+                                                    <span class="navi-text">Post</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-writing"></i>
+                                                    </span>
+                                                    <span class="navi-text">File</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                        <!--end::Navigation-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end::Header-->
+                        <!--begin::Body-->
+                        <div class="card-body d-flex flex-column p-0">
+                            <!--begin::Chart-->
+                            <div id="kt_mixed_widget_6_chart" style="height: 200px"></div>
+                            <!--end::Chart-->
+                            <!--begin::Stats-->
+                            <div class="card-spacer bg-white card-rounded flex-grow-1">
+                                <!--begin::Row-->
+                                <div class="row m-0">
+                                    <div class="col px-8 py-6 mr-8">
+                                        <div class="font-size-sm text-muted font-weight-bold">Average Sale</div>
+                                        <div class="font-size-h4 font-weight-bolder">$650</div>
+                                    </div>
+                                    <div class="col px-8 py-6">
+                                        <div class="font-size-sm text-muted font-weight-bold">Commission</div>
+                                        <div class="font-size-h4 font-weight-bolder">$233,600</div>
+                                    </div>
+                                </div>
+                                <!--end::Row-->
+                                <!--begin::Row-->
+                                <div class="row m-0">
+                                    <div class="col px-8 py-6 mr-8">
+                                        <div class="font-size-sm text-muted font-weight-bold">Annual Taxes</div>
+                                        <div class="font-size-h4 font-weight-bolder">$29,004</div>
+                                    </div>
+                                    <div class="col px-8 py-6">
+                                        <div class="font-size-sm text-muted font-weight-bold">Annual Income</div>
+                                        <div class="font-size-h4 font-weight-bolder">$1,480,00</div>
+                                    </div>
+                                </div>
+                                <!--end::Row-->
+                            </div>
+                            <!--end::Stats-->
+                        </div>
+                        <!--end::Body-->
+                    </div>
+                    <!--end::Mixed Widget 4-->
+                </div>
+                <div class="col-lg-8">
+                    <!--begin::Card-->
+                    <div class="card card-custom gutter-b">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h3 class="card-label">Stock Analysis</h3>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <!--begin::Chart-->
+                            <div id="chart_5"></div>
+                            <!--end::Chart-->
+                        </div>
+                    </div>
+                    <!--end::Card-->
+                </div>
+
+            </div>
+            <!--end::Container-->
         </div>
-        <!--end::Container-->
+        <!--end::Entry-->
     </div>
-    <!--end::Entry-->
-</div>
-<!--end::Content-->
+    <!--end::Content-->
 
 
-@section Scripts{
-    <script>
-        $(function () {
-            $("ul.menu-nav li:eq(1)").addClass("menu-item-active");
-        })
-    </script>
-}
+    @section Scripts{
+        <script>
+            $(function () {
+                $("ul.menu-nav li:eq(1)").addClass("menu-item-active");
+            })
+        </script>
+    }
+    <script src="assets/plugins/jquery/dist/jquery.min.js"></script>
+    <script src="assets/js/pages/features/charts/apexcharts.js"></script>
