--- a/Mealmate.Admin/Views/Shared/_AuthLayout.cshtml
+++ b/Mealmate.Admin/Views/Shared/_AuthLayout.cshtml
@@ -37,6 +37,7 @@
     <script src="~/assets/plugins/global/plugins.bundle.js"></script>
     <script src="~/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
     <script src="~/assets/js/scripts.bundle.js"></script>
+    <script src="~/assets/js/pages/custom/login/login.js"></script>
     <!--end::Global Theme Bundle-->
 </body>
 </html>
