--- a/Mealmate.Admin/Areas/Admin/Views/Shared/Components/MenuList/Default.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/Components/MenuList/Default.cshtml
@@ -32,7 +32,26 @@
                     </label>
                 </td>
                 <td>
-                    @item.Title
+                    <div>
+                        @item.Title
+                    </div>
+                    <div class="small">
+                        <strong>
+                            Dietaries
+                        </strong>
+                        
+                        <span>
+                            Gluten, Free, Celiac, Vegetarian, Vegan
+                        </span>
+                    </div>
+                    <div class="small">
+                        <strong>
+                            Allergens
+                        </strong>
+                        <span>
+                            Egg, Celery, Fish, Lupin, Milk
+                        </span>
+                    </div>
                 </td>
                 <td>
                     @item.MenuType
