--- a/Mealmate.Admin/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Views/Home/Index.cshtml
@@ -147,7 +147,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" data-toggle="tab" href="#restroom_tab">
-                                            <span class="nav-icon"><i class="fa fa-bed fa-lg"></i></span>
+                                            <span class="nav-icon"><i class="fa fa-toilet fa-lg"></i></span>
                                             <span class="nav-text">Rest Room Request</span>
                                         </a>
                                     </li>
