--- a/Mealmate.Admin/Views/Shared/MainMenu.cshtml
+++ b/Mealmate.Admin/Views/Shared/MainMenu.cshtml
@@ -57,16 +57,16 @@
                     <a href="#"
                        class="menu-link">
                         <span class="svg-icon menu-icon">
-                            <i class="fa fa-th-list"></i>
+                            <i class="fa fa-signal"></i>
                         </span>
-                        <span class="menu-text">QR Code Types</span>
+                        <span class="menu-text">Order States</span>
                     </a>
                 </li>
                 <li class="menu-item" aria-haspopup="true">
                     <a href="#"
                        class="menu-link">
                         <span class="svg-icon menu-icon">
-                            <i class="fa fa-th-list"></i>
+                            <i class="fa fa-clipboard"></i>
                         </span>
                         <span class="menu-text">Menu Types</span>
                     </a>
@@ -84,9 +84,18 @@
                     <a href="#"
                        class="menu-link">
                         <span class="svg-icon menu-icon">
-                            <i class="fa fa-th-list"></i>
+                            <i class="fa fa-thumbs-down"></i>
                         </span>
-                        <span class="menu-text">Order States</span>
+                        <span class="menu-text">Allergens</span>
+                    </a>
+                </li>
+                <li class="menu-item" aria-haspopup="true">
+                    <a href="#"
+                       class="menu-link">
+                        <span class="svg-icon menu-icon">
+                            <i class="fa fa-egg"></i>
+                        </span>
+                        <span class="menu-text">Dietaries</span>
                     </a>
                 </li>
             </ul>
