--- a/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
@@ -196,6 +196,45 @@
                                 <label class="col-form-label font-weight-bolder">Description</label>
                                 <textarea type="text" asp-for="Description" class="form-control" rows="4"></textarea>
                             </div>
+                            <div class="col-lg-12 col-md-12 mt-5">
+                                <h6 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Allergens</h6>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="kt-checkbox-inline">
+                                    @for (int i = 0; i < Model.Allergens.Count; i++)
+                                    {
+
+                                        <label class="checkbox mr-4">
+                                            <input type="checkbox" asp-for="@Model.Allergens[i].IsSelected">
+                                            @Model.Allergens[i].Name
+                                            <span></span>
+                                        </label>
+
+                                        <input type="hidden" asp-for="@Model.Allergens[i].AllergenId" />
+                                        <input type="hidden" asp-for="@Model.Allergens[i].Name" />
+                                    }
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 col-md-12 mt-5">
+                                <h6 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Dietaries</h6>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="kt-checkbox-inline">
+                                    @for (int i = 0; i < Model.Dietaries.Count; i++)
+                                    {
+
+                                        <label class="checkbox mr-4">
+                                            <input type="checkbox" asp-for="@Model.Dietaries[i].IsSelected">
+                                            @Model.Dietaries[i].Name
+                                            <span></span>
+                                        </label>
+
+                                        <input type="hidden" asp-for="@Model.Dietaries[i].DietaryId" />
+                                        <input type="hidden" asp-for="@Model.Dietaries[i].Name" />
+                                    }
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
